<resources>
    <string name="greetingText">Hello, User!</string>
    <string name="mainExerciseHint">Enter Exercise</string>
    <string name="mainWeightHint">Enter Weight</string>
    <string name="mainRepsHint">Enter Reps</string>
    <string name="mainSubmitButton">Submit</string>
    <string name="no_logs_message">No smoothies yet.</string>

    <string name="loginUsernameHint">Username</string>
    <string name="loginPasswordHint">Password</string>
    <string name="loginErrorTExt">Incorrect log in info.</string>
    <string name="signUpConfirmPasswordHint">Confirm Password</string>
    <string name="loginSignUpText">Don\'t have an account?</string>
    <string name="app_name">Verra</string>
</resources>
