<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/signUpEditTextPassword"
        android:layout_width="242dp"
        android:layout_height="58dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="280dp"
        android:backgroundTint="#4A7350"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/loginPasswordHint"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainActivityDisplay" />

    <EditText
        android:id="@+id/signUpEditTextConfirmPassword"
        android:layout_width="242dp"
        android:layout_height="58dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="208dp"
        android:backgroundTint="#4A7350"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/signUpConfirmPasswordHint"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainActivityDisplay" />

    <EditText
        android:id="@+id/signUpEditTextUsername"
        android:layout_width="242dp"
        android:layout_height="58dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="352dp"
        android:backgroundTint="#4A7350"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/loginUsernameHint"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainActivityDisplay" />

    <ImageView
        android:id="@+id/verraLogo"
        android:layout_width="255dp"
        android:layout_height="258dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.067"
        app:srcCompat="@mipmap/ic_launcher_foreground" />

    <Button
        android:id="@+id/loginSignInButton2"
        android:layout_width="174dp"
        android:layout_height="96dp"
        android:backgroundTint="#4E8353"
        android:text="Sign Up"
        app:iconTint="#4CAF50"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.848" />

</androidx.constraintlayout.widget.ConstraintLayout>